Reinstating tag that devsite needs present to supress machine translation. (#1090)

--- a/docgen/theme/layouts/default.hbs
+++ b/docgen/theme/layouts/default.hbs
@@ -6,6 +6,7 @@
     <meta name="hide_page_heading" value="true" />
     <meta name="project_path" value="/_project.yaml" />
     <meta name="book_path" value="/docs/reference/_book.yaml" />
+    <meta name="translation" value="disabled" />
     <meta name="gtm_var" data-key="docType" data-value="reference">
     <meta name="page_type" value="reference" />
     <title>{{#ifCond model.name '==' project.name}}{{project.name}}{{else}}{{model.name}} | {{project.name}}{{/ifCond}}</title>
